--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,46 @@
 # The Site Configuration
 
+# Import the theme
 theme: jekyll-theme-chirpy
-lang: ko-KR
-timezone: Asia/Seoul
+
+# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
+# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
+# otherwise, the layout language will use the default value of 'en'.
+lang: en
+
+# Change to your timezone › https://zones.arilyn.cc
+timezone:
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: lettersto # the main title
-tagline: letters to...
-# used by seo meta and the atom feed
+title: Chirpy # the main title
+
+tagline: A text-focused Jekyll theme # it will display as the subtitle
+
 description: >- # used by seo meta and the atom feed
-  lettersto blog
+  A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://lettersto.github.io"
+url: ""
 
 github:
-  username: Hyeryeong Jeong
+  username: github_username # change to your GitHub username
 
-# twitter:
-#   username: twitter_username
+twitter:
+  username: twitter_username # change to your Twitter username
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-<<<<<<< Updated upstream
   name: your_full_name
   email: example@domain.com # change to your email address
   fediverse_handle: # fill in your fediverse handle. E.g. "@username@domain.com"
-=======
-  # name: your_full_name
-  # email: example@domain.com # change to your email address
->>>>>>> Stashed changes
   links:
     # The first element serves as the copyright owner's link
-    # - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/lettersto # change to your GitHub homepage
+    - https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -95,7 +99,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/cat.jpeg
+avatar:
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
